started adding my information to the page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My GitHub Page</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
@@ -33,7 +34,7 @@
         <section id="about" class="section">
             <div class="container">
                 <h2>About</h2>
-                <p>This is a basic template for a GitHub page. You can customize this content to showcase your projects, skills, and interests.</p>
+                <p>I am a student at North Carolina State University, pursuing a Bachelor of Science in Computer Science.</p>
             </div>
         </section>
 
@@ -42,18 +43,13 @@
                 <h2>Projects</h2>
                 <div class="project-grid">
                     <div class="project-card">
-                        <h3>Project 1</h3>
-                        <p>Description of your first project.</p>
-                        <a href="#" class="project-link">View Project</a>
+                        <h3>Damage Calculator</h3>
+                        <p>Damage Calculator for Pokemon, intended for VGC.</p>
+                        <a href="/damage-calculator" class="project-link">View Project</a>
                     </div>
                     <div class="project-card">
-                        <h3>Project 2</h3>
-                        <p>Description of your second project.</p>
-                        <a href="#" class="project-link">View Project</a>
-                    </div>
-                    <div class="project-card">
-                        <h3>Project 3</h3>
-                        <p>Description of your third project.</p>
+                        <h3>Portfolio</h3>
+                        <p>My personal portfolio, and interactive resume.</p>
                         <a href="#" class="project-link">View Project</a>
                     </div>
                 </div>
@@ -65,9 +61,9 @@
                 <h2>Contact</h2>
                 <p>Feel free to reach out to me through the following channels:</p>
                 <div class="contact-links">
-                    <a href="https://github.com/yourusername" class="contact-link">GitHub</a>
-                    <a href="mailto:your.email@example.com" class="contact-link">Email</a>
-                    <a href="https://linkedin.com/in/yourusername" class="contact-link">LinkedIn</a>
+                    <a href="https://github.com/danielkyu2004" class="contact-link" target="_blank" >GitHub</a>
+                    <a href="mailto:danielkyu2004@gmail.com" class="contact-link">Email</a>
+                    <a href="https://linkedin.com/in/daniel-yu-bb2284209" class="contact-link" target="_blank">LinkedIn</a>
                 </div>
             </div>
         </section>
@@ -79,6 +75,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    
 </body>
 </html>
