--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="project-card">
                         <h3>Damage Calculator</h3>
                         <p>Damage Calculator for Pokemon, intended for VGC.</p>
-                        <a href="/damage-calculator" class="project-link">View Project</a>
+                        <a href="/pkmn-damage-calc" class="project-link">View Project</a>
                     </div>
                     <div class="project-card">
                         <h3>Portfolio</h3>
