--- a/index.html
+++ b/index.html
@@ -34,7 +34,23 @@
         <section id="about" class="section">
             <div class="container">
                 <h2>About</h2>
-                <p>I am a student at North Carolina State University, pursuing a Bachelor of Science in Computer Science.</p>
+                <div class="about-content">
+                    <div class="about-text">
+                        <p>I am a student at North Carolina State University, pursuing a Bachelor of Science in Computer Science.
+                            I have a passion for programming and web development, especiallly involving education and mathematics.
+                            I have been programming for 4 years, and have a strong foundation in Python, Java, and JavaScript.
+                        </p>
+                        
+                        <p>Last summer, I worked as a Software Enginnering Intern at CodeHS, where I worked on internal tools for automatically generating changelogs.
+                            I have also been working for the last 4 years as a tutor for K-12 students in math.
+                        </p>
+                    </div>
+                    <div class="about-image">
+                        <div class="image-placeholder">
+                            <span class="placeholder-text">Your Photo Here</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
