--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="project-card">
                         <h3>Portfolio</h3>
                         <p>My personal portfolio, and interactive resume.</p>
-                        <a href="#" class="project-link">View Project</a>
+                        <a href="/portfolio" class="project-link">View Project</a>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 My GitHub Page. All rights reserved.</p>
+            <p></p>
         </div>
     </footer>
 
