--- a/index.html
+++ b/index.html
@@ -71,23 +71,21 @@
                 </div>
             </div>
         </section>
-
-        <section id="contact" class="section">
-            <div class="container">
-                <h2>Contact</h2>
-                <p>Feel free to reach out to me through the following channels:</p>
-                <div class="contact-links">
-                    <a href="https://github.com/danielkyu2004" class="contact-link" target="_blank" >GitHub</a>
-                    <a href="mailto:danielkyu2004@gmail.com" class="contact-link">Email</a>
-                    <a href="https://linkedin.com/in/daniel-yu-bb2284209" class="contact-link" target="_blank">LinkedIn</a>
-                </div>
-            </div>
-        </section>
     </main>
 
     <footer>
         <div class="container">
-            <p></p>
+            <div class="footer-content">
+                <div class="footer-info">
+                    <h3>Daniel Yu</h3>
+                    <p>Computer Science Student & Software Developer</p>
+                </div>
+                <div class="footer-links">
+                    <a href="https://github.com/danielkyu2004" target="_blank">GitHub</a>
+                    <a href="https://linkedin.com/in/daniel-yu-bb2284209" target="_blank">LinkedIn</a>
+                    <a href="mailto:danielkyu2004@gmail.com">Email</a>
+                </div>
+            </div>
         </div>
     </footer>
 
